<?xml version="1.1"?>
<package format="2">
  <name>crss_chassis_driver</name>
  <version>1.0.0</version>
  <description>The vdcar package</description>

  <maintainer email="vd@veddha.com">jojo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>vd_msgs</build_depend>
  <!-- <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend> -->
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>vd_msgs</build_export_depend>
  <!-- <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>vd_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend> -->
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>vd_msgs</exec_depend>
  <!-- <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vd_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>   -->
 
  <export></export>
</package>
