<?xml version="1.0"?>
<package format="2">
  <name>pavo2_ros</name>
  <version>2.0.5</version>
  <description>The pavo2_ros package</description>

  <maintainer email="zhoujun@siminics.com">zhoujun</maintainer>

  <license>BSD</license>


  <url type="website">www.siminics.com</url> 

  <author email="zhoujun@siminics.com">zhoujun</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <depend>dynamic_reconfigure</depend>

  <build_export_depend>rosconsole</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
